# blender-studio

./: .arcconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintignore  README.md  deploy.sh  manage.py  manage.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  restart.sh  setup.cfg  sf_takes_paths.csv  stylelint.config.js  test.patch  test.sh  unibeautifyrc.json  update_and_restart.sh
assets/: admin.py
assets/migrations/: 0001_initial.py  0002_auto_20200601_1628.py  0002_auto_20200602_0745.py  0002_squashed_0003_noop.py  0003_auto_20200603_0859.py  0003_storagebackend.py  0004_auto_20200608_1258.py  0004_squashed_0010_alter_fields_in_models.py  0005_storage_backends.py  0006_rename_storage_backend.py  0007_big_integer_field.py  0008_static_asset_preview.py  0009_source_preview_as_dynamic_file.py  0010_rename_static_asset_duration.py  0011_rename_storage_backend.py  0011_squashed_0012_rename_storage_backend.py  0012_rename_storage_backend_fields.py
assets/models/: __init__.py  assets.py  licenses.py  storages.py
blendercloud/: __init__.py  flask_login.py  middleware.py  session.py
blendercloud/tests/: test_middleware.py  test_session.py
blog/: admin.py  apps.py  forms.py  models.py  queries.py  signals.py  urls.py
blog/migrations/: 0001_initial.py  0002_auto_20201218_1135.py  0002_rename_subtitle_field.py  0003_post_attachments.py  0003_revision_topic.py  0004_auto_20201218_1135.py  0004_revision_thumbnail.py  0005_modify_content_help_text.py  0005_update_file_fields.py  0006_modify_help_texts.py  0006_remove_storage_location_fields.py  0007_fix_help_text_migrations.py  0007_revision_fields.py  0008_legacy_id.py  0008_update_help_text_replace_float_classes.py  0009_post_attachments.py  0010_extend_slug.py  0011_post_date_published.py  0012_drop_revisions.py  0013_auto_20201110_1603.py  0014_add_post_likes.py
blog/tests/: test_blog_posts.py  test_like.py
blog/views/: blog.py
characters/: __init__.py  admin.py  apps.py  models.py  queries.py  signals.py  urls.py
characters/migrations/: 0001_initial.py  0002_add_is_published_is_free_to_character_version.py  0003_characterversion_date_published.py  0004_add_fields_to_showcase.py  0005_remove_character_is_free.py  0006_add_preview_youtube_link.py  0007_remove_character_view_count.py  0008_add_preview_video_static_asset.py  0009_modify_description_help_text.py  0010_modify_help_texts.py  0011_fix_help_text_migrations.py  0012_update_help_text_replace_float_classes.py
characters/tests/: test_characters.py
characters/views/: characters.py
cloud_import/: apps.py
cloud_import/management/: files.py  mixins.py  mongo.py
comments/: admin.py  apps.py  models.py  queries.py  signals.py  typed_templates.py  urls.py
comments/migrations/: 0001_initial.py  0002_add_date_deleted.py  0002_auto_20201218_1135.py  (+5 more)
common/: context_processors.py  decorators.py  help_texts.py  history.py  jinja2.py  mailgun.py  markdown.py  markdown_renderers.py  mixins.py  queries.py  shortcodes.py  signals.py  storage.py  types.py  upload_paths.py  utils.py
docs/: architecture.md  development.md  main.md  miscellaneous.md  production.md  resetting_migrations.md  search.md
emails/: admin.py  models.py  util.py
film/models/: film.py  (+2 more)
films/: __init__.py  admin.py  apps.py  queries.py  signals.py  urls.py  views.py
profiles/: admin.py  apps.py  blender_id.py  context_processors.py  datatypes.py  managers.py  models.py  queries.py  signals.py  tasks.py  urls.py
search/: __init__.py  apps.py  health_check.py  queries.py  queries_training.py  setup.py  signals.py  urls.py  views.py
static_assets/: __init__.py  admin.py  apps.py  tasks.py  urls.py  views.py
stats/: models.py  urls.py  views.py
store_import/: README.md  apps.py  config.xml  load_store_backup.sh
studio/: settings.example.py  settings.py  settings_common.py  settings_store_import.py  urls.py  wsgi.py
subscriptions/: admin.py  apps.py  common_email_domains.txt  decorators.py  form_fields.py  form_widgets.py  forms.py  middleware.py  models.py  permissions.py  queries.py  signals.py  tasks.py  urls.py  validators.py
templates/: home.html
training/: admin.py  apps.py  context_processors.py  settings.example.py  settings_common.py  signals.py  urls.py
training_main/: admin.py  apps.py  context_processors.py  types.py
users/: admin.py  apps.py  blender_id.py  context_processors.py  datatypes.py  models.py  queries.py  signals.py  tasks.py  urls.py
(+940 files in other folders)
