[tool.poetry]
name = "blender-studio"
version = "0.1.0"
description = ""
authors = ["Sem Mulder <sem@blender.studio>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0 || 3.0.*"
django-pipeline = "^2.0"
psycopg2 = "^2.8"
blender_id_oauth_client = "^0.9.3"
libsasscompiler = "^0.1.5"
jsmin = "^2.2.2"
sorl-thumbnail = "^12.6.3"
mistune = "^0.8.4"
looper = {git = "git://git.blender.org/looper.git", branch = "master"}
Pillow = "^7.2"
django-storages = {extras = ["google"], version = "^1.10.1"}
pymongo = "^3.10.1"
markupsafe = "^1.1.1"
meilisearch = "^0.12.0"
django-taggit = "^1.3.0"
boto3 = "^1.14.60"
responses = "^0.12.0"
attrs = "^19.3.0"
Flask = "1.0.3"
bleach = "^3.2.1"
shortcodes = "2.5"
sentry-sdk = "^0.19.1"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
mypy = "*"
django-stubs = "^1.5"
pre-commit = "^2.6.0"
ipython = "^7.17"
factory-boy = "^3.0"
django-debug-toolbar = "^2.2"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"

[tool.black]
line-length = 100
target_version = ['py38']
skip_string_normalization = true
exclude = 'migrations/|studio/settings'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
