[tool.poetry]
name = "blender-studio"
version = "0.1.0"
description = ""
authors = ["Sem Mulder <sem@blender.studio>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0 || 3.0.*"
django-pipeline = "^2.0"
psycopg2 = "^2.8"
blender_id_oauth_client = "^0.9.3"
libsasscompiler = "^0.1.5"
jsmin = "^2.2.2"
sorl-thumbnail = "^12.7.0"
mistune = "2.0.0a4"
looper = {git = "git://git.blender.org/looper.git", branch = "patched-clock"}
Pillow = "^7.2"
django-storages = {extras = ["google"], version = "1.11.1"}
pymongo = "^3.10.1"
markupsafe = "^1.1.1"
meilisearch = "^0.12.0"
django-taggit = "^1.3.0"
boto3 = "1.18.56"
responses = "^0.12.0"
attrs = "^19.3.0"
Flask = "1.0.3"
bleach = "^3.2.1"
shortcodes = "2.5"
sentry-sdk = "^0.19.1"
requests-oauthlib = "^1.3.0"
django-activity-stream = "^0.9.0"
django-background-tasks = "^1.2.5"
django-anymail = {extras = ["mailgun"], version = "8.2"}
django-jsonfield-backport = "^1.0.2"
django-nested-admin = "^3.3.3"
cryptography = "3.3.2"
django-waffle = "2.1.0"
html5lib = "1.1"
braintree = "4.12.0"
python-stdnum = "^1.16"
localflavor = "^1.9"
pyvat = {git = "https://github.com/iconfinder/pyvat.git", rev = "419abd659ae5a4a6cb6ea9b54aa4bde17aefeb5b"}
alphabetic-timestamp = "1.1.5"
zeep = "^4.0.0"
django-loginas = "^0.3.9"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
mypy = "*"
django-stubs = "^1.5"
pre-commit = "2.9.0"
ipython = "^7.17"
factory-boy = "^3.0"
django-debug-toolbar = "^2.2"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
freezegun = "^1.0.0"
pip = "^21.0.1"
django-sslserver = "^0.22"
djhtml = "1.4.0"
mysqlclient = "^2.0.3"
the-real-django-wordpress = {git = "https://github.com/anka-sirota/django-wordpress", rev = "42c655c2142d009ddd6a2bab24809d731c17af8a"}
phpserialize = "^1.3"

[tool.black]
line-length = 100
target_version = ['py38']
skip_string_normalization = true
exclude = 'migrations/|studio/settings'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
